mType/tests/testFiles/typeChecking/error/functionParameterFloatConversionStringError.mt
function processFloat(float f): float {
    return f * 2.0;
}

processFloat("3.14");  // string cannot be passed as float